--- a/app/src/main/res/menu/posts_menu.xml
+++ b/app/src/main/res/menu/posts_menu.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/menuItem_sign_out"
         android:title="Sign Out" />
+    <item
+        android:id="@+id/menuItem_create_post"
+        android:title="Create Post" />
 </menu>
