--- a/app/src/main/res/layout/fragment_post_view.xml
+++ b/app/src/main/res/layout/fragment_post_view.xml
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Title"
+        android:text="@string/title"
         android:textColor="#1d1d1d"
-        android:textSize="18sp"
+        android:textSize="24sp"
         tools:text="Title" />
 
     <TextView
@@ -22,9 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Timestamp"
+        android:text="@string/timestamp"
         android:textColor="#aaaaaa"
-        android:textSize="10sp"
+        android:textSize="14sp"
         tools:text="Timestamp" />
 
     <TextView
@@ -32,12 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Message"
+        android:text="@string/message"
+        android:textSize="18sp"
         tools:text="Message" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 </LinearLayout>
