--- a/app/src/main/res/layout/fragment_post_view.xml
+++ b/app/src/main/res/layout/fragment_post_view.xml
@@ -31,13 +31,14 @@
         android:id="@+id/textView_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="15dp"
         android:text="@string/message"
         android:textSize="18sp"
         tools:text="Message" />
 
-    <com.google.android.gms.maps.MapView
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.SupportMapFragment" />
 </LinearLayout>
