Implemented Your Post Fragment using PostArrayAdapter Update PostArrayAdapter to Use replace rather than hide/add Added View Your Posts as menu option in Post Activity

--- a/app/src/main/res/menu/posts_menu.xml
+++ b/app/src/main/res/menu/posts_menu.xml
@@ -4,7 +4,13 @@
     <item
         android:id="@+id/menuItem_create_post"
         android:title="@string/create_post" />
+
+    <item
+        android:id="@+id/menuItem_view_your_posts"
+        android:title="@string/view_your_posts"/>
+
     <item
         android:id="@+id/menuItem_sign_out"
         android:title="@string/sign_out" />
+
 </menu>
