--- a/app/src/main/res/layout/fragment_posts_list.xml
+++ b/app/src/main/res/layout/fragment_posts_list.xml
@@ -4,6 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PostsListFragment">
+
+    <RelativeLayout
+        android:id="@+id/animation_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
