--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,31 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="240dp"
+        android:layout_height="90dp"
+        android:textSize="35dp"
+        android:textAlignment="center"
+        android:text="@string/welcome"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/ic_bubble_chart_black_24dp"
+        android:layout_marginBottom="75dp"/>
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/google_sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="40dp"/>
+
+    <TextView
+        android:layout_width="240dp"
+        android:layout_height="120dp"
+        android:text="TO DO: Add trending event here"
+        android:textAlignment="center" />
+
 </LinearLayout>
