--- a/app/src/main/res/menu/posts_menu.xml
+++ b/app/src/main/res/menu/posts_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menuItem_map_view"
-        android:title="@string/map_view"/>
+        android:id="@+id/menuItem_mapView"
+        android:title="@string/map_view" />
 
     <item
         android:id="@+id/menuItem_create_post"
