--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -33,4 +33,16 @@
         android:textSize="10sp"
         tools:text="Timestamp" />
 
+    <Button
+        android:id="@+id/upvote_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Upvote" />
+
+    <TextView
+        android:id="@+id/row_textView_upvotes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Number of upvotes" />
+
 </LinearLayout>
